--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.2.1",
+    "@types/react-date-range": "^1.4.4",
+    "date-fns": "^2.29.2",
+    "geolib": "^3.3.3",
+    "mapbox-gl": "^2.10.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-map-gl": "^7.0.19"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
